--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -11,8 +11,10 @@ patch:
     powertoys.powerlauncher.exe: { ascii_mode: true }
     microsoft.cmdpal.ui.exe: { ascii_mode: true }
     explorer.exe: { ascii_mode: true }
-  "preset_color_schemes/example":
-    author: example
+  show_notifications: false
+  "preset_color_schemes/default":
+    name: default
+    author: default
     back_color: 0xF9F9F9
     border_color: 0xF9F9F9
     candidate_back_color: 0x00000000
@@ -31,12 +33,8 @@ patch:
     hilited_shadow_color: 0x00000000
     hilited_text_color: 0x000000
     label_color: 0x000000
-    name: example
     nextpage_color: 0x00000000
     prevpage_color: 0x00000000
     shadow_color: 0x00000000
     text_color: 0x000000
-  show_notifications: false
-  "style/color_scheme": example
-  "style/horizontal": true
-  "style/mark_text": ""
+  "style/color_scheme": default
